Improved command forwarding by yielding control (inherited IO)